# vlte-bptm

./: .gitignore  README.en.md  README.md  SETUP_GITHUB.md  git_publish_setup.ps1  pyproject.toml
articles/: vlte-bptm-thought-state-arch.md
data/: README.md  conversation_accumulation_reviews_v1.json  conversation_accumulation_v1.json  harvested_claudelog_approval_v1.json  harvested_claudelog_v1.json  intent_conversational_approval_v1.json  intent_training_corpus_quarantine_v1.json  intent_training_corpus_v1.json  knowledge_index_v1.json
debate_lab/: README.md  __init__.py  debate_config.json  router_debate.py  topics_seed.json  topics_v6_structural_build_30.json  topics_v8_recovery_100.json  topics_weakpoint_explain_english_v1.json
docs/: BIT_SYSTEMS_PROPOSALS_2026-07-02.md  EXTERNAL_REVIEW_REPORT_2026-06-11.md  HANDOVER_2026-06-11_session11.md  HANDOVER_2026-06-11_session12.md  HANDOVER_2026-06-11_session3.md  HANDOVER_2026-06-11_session6.md  HANDOVER_2026-06-11_session7.md  HANDOVER_2026-06-24_v6_facilitated_boundary.md  HANDOVER_2026-06-29_router_honesty_and_model_lean.md  INTENT_MODEL_v0_3_FROZEN_2026-06-16.md  KNOWLEDGE_INDEX_v1.md  PATTERN_LANGUAGE_MODEL_roadmap.md  PLM_V10_ROADMAP.md  PLM_V11_ROADMAP.md  PLM_V4_ROADMAP.md  PLM_V5_ROADMAP.md  PLM_V6_ROADMAP.md  PLM_V7_ROADMAP.md  PLM_V8_ROADMAP.md  PLM_V9_ROADMAP.md  PUZZLE_LEARNING_V4_PLAN.md  ROUTE_CAM_v0_1_design.md  SEMANTIC_ADAPTER_fix_results_2026-06-13.md  SEMANTIC_ADAPTER_v0_3_design.md  THOUGHT_JOURNAL_v0_1_design.md  V0_4_ROADMAP_2026-06-16.md  V6_DRAFT_ARTIFACTS_2026-06-23.md  VLTE_BPTM_roadmap.md  (+9 more)
(+369 files in other folders)
